2008-11-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs: properly clean
	the runtime image in case we're unsigning an assembly.

2008-11-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/RuntimeImage.cs: add [Flags] attribute.
	Fixes #440574.

2008-10-27  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyInfo.cs: bump version.

2008-10-27  Zoltan Varga  <vargaz@gmail.com>

	* Mono.Cecil/AssemblyStripper.cs: Strip locals info too.

2008-10-17  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs: remove dead code.
	* Mono.Cecil.Cil/ISymbolWriter.cs: simplify Write method.

2008-10-17	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Cil/CodeWriter.cs
	* Mono.Cecil.Cil/MethodBody.cs:
		mcs-cecil-local-var-1.diff patch enabling better handling of local
		variable debugging information applied.
		Patch by Juerg Billeter <j@bitron.ch>

2008-10-17	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil/ConstructorCollection.cs
	* Mono.Cecil.Binary/ImageReader.cs:
		Compact Framework compilation fixes.

2008-10-14  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclarationReader.cs: protect against
	wrongly formatted security attributes.

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/SymbolStoreHelper.cs: Change two "static readonly"
	fields into const.
	[Found using Gendarme PreferLiteralOverInitOnlyFieldsRule]

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/ConstructorCollection.cs: Fix a NRE if a null parameter
	is provided to one of the GetConstructor overloads.

2008-10-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs: don't cache generic typespecs,
	as some compiler reuse generic instance signatures with different
	generic contexts.

2008-10-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.dll.sources
	* Mono.Cecil.csproj
	* Mono.Cecil/AssemblyStripper.cs
	* Mono.Cecil.Cil/CodeWriter.cs